# backend

./: .gitignore  .pylintrc  .style.yapf  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  application.py  backend.dia  common_config.py  config.py  devel.py  local_config_ci.py  main.py  manage.py  migrate.py  name.py  oxyde_config.py  provisioners.mk  pyproject.toml  requirements.txt  requirements.yml  requirements_dev.txt  setup.cfg  setup.py  tests.py  wsgi.py
.circleci/: config.yml
.github/workflows/: pythonapp.yml
alembic/: env.py
alembic/versions/: 06a043f2516a_initial.py  14eb8b6e464c_initial.py  a754f05fd8e5_initial.py  baf1dd67f3ed_initial.py  ecd6a3f19a8f_initial.py  f2a9191e9157_initial.py
ansible/: site.yml
ansible/group_vars/: all
ansible/inventory/: inventory
ansible/roles/devel/tasks/: main.yml
ansible/roles/devel/templates/: login_conf.j2
ansible/roles/devel/vars/: main.yml
app/: __init__.py  db.py  factories.py  schemas.py  script.py  utils.py
app/api/: __init__.py  auth.py  namespaces.py  resources.py  schemas.py  user.py
app/api/fields/: auth.py  role.py  user.py
app/cli/: __init__.py
app/models/: auth.py  parsing.py
app/templates/: index.html
app/templates/flask-restplus/: swagger-ui.html
application/: __init__.py  schemas.py
application/api/: __init__.py  auth.py  me.py  methodviews.py  namespaces.py  pyser_parser.py  resources.py  role.py  schemas.py  user.py
application/cli/: __init__.py
application/models/: all.py  auth.py
application/schemas/: auth.py  base.py  paging.py
freenit/: __init__.py  app.py  auth.py  base_config.py  cli.py  config.py  db.py  decorators.py  encrypt.py  mail.py  migration.py  modules.py  permissions.py  stalwart.py  utils.py
freenit/api/: __init__.py  auth.py  blog.py  chat.py  dav.py  git.py  git_http.py  group.py  jabber.py  lms.py  mail.py  mailinglist.py  me.py  methodviews.py  omemo.py  profile.py  project.py  role.py  router.py  sieve.py  theme.py  user.py
freenit/api/auth/: __init__.py
freenit/api/domain/: __init__.py  ldap.py
freenit/api/role/: __init__.py  ldap.py  ldap_group.py  sql.py
freenit/api/user/: __init__.py  ldap.py  sql.py
freenit/cli/: __init__.py
freenit/fields/: objectid.py
freenit/git/: hooks.py  repo.py  store.py  store_ldap.py  store_sql.py  tasks.py  webhook.py
freenit/git/templates/: post-receive  pre-receive  update
freenit/mailinglist/: mail.py  store.py  store_ldap.py  store_sql.py  worker.py
freenit/models/: auth.py  base.py  blog.py  git.py  group.py  lms.py  mailinglist.py  metaclass.py  mixins.py  ormar.py  pagination.py  project.py  role.py  safe.py  theme.py  user.py
freenit/models/ldap/: base.py  domain.py  git.py  group.py  mailinglist.py  role.py  user.py
freenit/models/mongo/: role.py  user.py
freenit/models/ormar/: base.py  group.py  role.py  theme.py  user.py
freenit/models/sql/: base.py  base.pyi  blog.py  git.py  git.pyi  lms.py  lms.pyi  mailinglist.py  mailinglist.pyi  project.py  project.pyi  role.py  theme.py  user.py
freenit/project/: .gitignore  MANIFEST.in  Makefile  alembic.ini  application.py  common_config.py  config.py  devel.py  main.py  migrate.py  oxyde_config.py  provisioners.mk  pyproject.toml  requirements.yml  requirements_dev.txt  setup.py  wsgi.py
freenit/project/ansible/roles/devel/handlers/: main.yml
freenit/project/ansible/roles/devel/tasks/: main.yml
freenit/project/ansible/roles/devel/templates/: uwsgi.ini.j2  uwsgi.j2
freenit/project/ansible/roles/devel/vars/: main.yml
freenit/project/ldap/: README.md  omemo.schema
freenit/project/models/: user.py
freenit/project/project/: __init__.py  app.py  base_config.py  config.py
freenit/project/project/api/: __init__.py  router.py  user.py
freenit/project/project/models/: role.py  user.py
freenit/project/project/schemas/: user.py
freenit/project/schemas/: role.py
freenit/project/shell/: provision.sh
freenit/project/templates/: site.yml.tpl
freenit/project/tests/: base.py  client.py  conftest.py  factories.py  test_auth.py  test_git.py  test_user.py
freenit/schemas/: auth.py  base.py  paging.py  role.py  user.py
freenit/templates/: swaggerui.html
ldap/: README.md  mailinglist.ldif  mailinglist.schema  omemo.ldif
migrations/: 0001_initial.py  0002_add_omemo_bundle.py  0003_create_mailing_list_table.py  0004_add_project_kanban.py  0005_add_project_groups.py  0006_add_lms.py  0007_add_git.py  0008_add_blog.py  001_initial.py
migrations/main/: 001_initial.py
templates/: activate.fish  peewee_migrate.txt  site.yml.tpl
tests/: base.py  client.py  conftest.py  factories.py  test_auth.py  test_blog.py  test_dummy.py  test_group.py  test_lms.py  test_mailinglist.py  test_modules.py  test_permission.py  test_project.py  test_role.py  test_user.py
