[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freenit"
dynamic = ["version"]
description = "REST API framework based on FastAPI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "passlib",
  "prompt-toolkit",
  "pydantic[email]",
  "pyjwt",
]
authors = [
  {name = "Goran Mekić", email = "meka@tilda.center"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Web Environment",
  "Programming Language :: Python"
]

[project.optional-dependencies]
  mongo = ["beanie"]
  dev = [
    "aiosqlite",
    "ruff",
    "uvicorn",
  ]
  doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
  ]
  build = ["twine"]
  ldap = ["bonsai"]
  sql = [
    "alembic",
    "ormar",
  ]
  test = [
    "aiosqlite",
    "bandit",
    "httpx",
    "pytest-asyncio",
    "pytest-factoryboy",
    "requests",
    "ruff",
  ]
  all = [
    "aiosqlite",
    "alembic",
    "bandit",
    "beanie",
    "bonsai",
    "httpx",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
    "ormar",
    "pytest-asyncio",
    "pytest-factoryboy",
    "requests",
    "ruff",
    "twine",
    "uvicorn",
  ]

[project.urls]
Homepage = "https://freenit.org" 
Repository = "https://github.com/freenit-framework/backend"

[project.scripts]
freenit = "freenit.cli:main"

[tool.hatch.version]
path = "freenit/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["freenit", "bin"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"bin" = "freenit/bin"
