[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NAME"
dynamic = ["version"]
description = "REST API framework based on FastAPI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "aiosqlite",
  "freenit[sql]",
]
authors = [
  {name = "John Doe", email = "john@doe.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Web Environment",
  "Programming Language :: Python"
]

[project.optional-dependencies]
  mongo = ["freenit[mongo]"]
  dev = ["freenit[dev]"]
  ldap = ["freenit[ldap]"]
  sql = ["freenit[sql]"]
  test = ["freenit[test]"]

[project.urls]
Homepage = "https://freenit.org" 
Repository = "https://github.com/freenit-framework/backend"

[tool.hatch.version]
path = "NAME/__init__.py"
